# ClassRoutineManager

./: .gitignore  CMakeLists.txt  README.md  setup-windows.ps1
resources/styles/: main.qss
src/: main.cpp  mainwindow.cpp  mainwindow.h
